[package]
name = "clap-utilities"
description = "Small utilities related to clap"
version = "0.2.0"
edition = "2021"
authors = ["khai96_ <hvksmr1996@gmail.com>"]
keywords = ["clap"]
repository = "https://github.com/KSXGitHub/clap-utilities.git"
readme = "README.md"
include = [
  "/src",
  "/Cargo.toml",
  "/README.md",
]
license = "MIT"
rust-version = "1.89.0"

[lib]
name = "clap_utilities"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
clap_complete = "4.5.60"
derive_more = { version = "2.0.1", features = ["display", "error"] }
pipe-trait = "0.4.0"

[dev-dependencies]
cargo_toml = "0.22.3"
